// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Validate deployment readiness before shipping to Azure. USE THIS SKILL when users want to check if their app is ready to deploy, validate azure.yaml or Bicep configuration, run preflight checks, test deployment preview, or troubleshoot deployment errors.",
  "extractedKeywords": [
    "azure",
    "before",
    "bicep",
    "check",
    "checks",
    "cli",
    "configuration",
    "deploy",
    "deployment",
    "errors",
    "preflight",
    "preview",
    "readiness",
    "ready",
    "shipping",
    "skill",
    "terraform",
    "test",
    "their",
    "this",
    "troubleshoot",
    "users",
    "validate",
    "validation",
    "want",
    "when",
    "yaml",
  ],
  "name": "azure-validate",
}
`;

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "azure",
  "before",
  "bicep",
  "check",
  "checks",
  "cli",
  "configuration",
  "deploy",
  "deployment",
  "errors",
  "preflight",
  "preview",
  "readiness",
  "ready",
  "shipping",
  "skill",
  "terraform",
  "test",
  "their",
  "this",
  "troubleshoot",
  "users",
  "validate",
  "validation",
  "want",
  "when",
  "yaml",
]
`;
